# ManhattanProject

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  README.txt  VTKPipeline.cpp  VTKPipeline.h  process_data.py  uwa.py  uwv.cpp  vtkRendererCallback.cxx  vtkRendererCallback.h
Old/: CMakeLists.txt  ManhattanProject.cpp
Old/NormalizeData/: CMakeLists.txt  NormalizeData.bat  NormalizeData.cpp  NormalizeData_02.bat  file_scale_01.txt
